<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:scrollbars="vertical"
    >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

     >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:text="@string/name_on_analysis"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="normal"
        android:typeface="normal" />

    <TextView
        android:id="@+id/name_on_analysis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:text="@string/name_on_analysis"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black" />

    <View
        style="@style/Divider"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:text="@string/matric_on_analysis"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="normal"
        android:typeface="normal" />

    <TextView
        android:id="@+id/matric_on_analysis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:text="@string/matric_on_analysis"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black" />

    <View
        style="@style/Divider"
        android:layout_marginBottom="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_of_entry"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="normal"
            android:typeface="normal" />

        <TextView
            android:id="@+id/year_of_entry_on_analysis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:text="@string/year_of_entry"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />
    </LinearLayout>
    <View
        style="@style/Divider"
        android:layout_marginBottom="5dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_of_entry"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="normal"
            android:typeface="normal" />

        <TextView
            android:id="@+id/mode_of_entry_on_analysis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:text="@string/mode_of_entry"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />
    </LinearLayout>
    <View
        style="@style/Divider"
        android:layout_marginBottom="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_of_courses_taken"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="normal"
            android:typeface="normal" />

        <TextView
            android:id="@+id/courses_taken_on_analysis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:text="@string/no_of_courses_taken"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />
    </LinearLayout>
    <View
        style="@style/Divider"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:text="@string/unit_reg"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="normal"
        android:typeface="normal" />

    <TextView
        android:id="@+id/unit_reg_on_analysis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="@string/unit_reg"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black" />
    <View
        style="@style/Divider"
        android:layout_marginBottom="5dp" />
    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:text="@string/units_passed"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="normal"
        android:typeface="normal" />

    <TextView
        android:id="@+id/unit_passed_on_analysis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:text="@string/units_passed"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black" />

    <View
        style="@style/Divider"
        android:layout_marginBottom="5dp" />



    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:text="@string/cgpa"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="normal"
        android:typeface="normal" />

    <TextView
        android:id="@+id/cgpa_on_analysis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:text="@string/cgpa"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black" />

    <View
        style="@style/Divider"
        android:layout_marginBottom="0dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:text="@string/class_of_grade"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/class_of_grade_on_analysis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:text="@string/class_of_grade"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black" />
</LinearLayout>
</ScrollView>